prodMetadata/src/objects/Partnership_Request__c.object
<CustomObject>
    <fields>
        <fullName>AAA_Categories__c</fullName>
        <label>AAA Categories</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Assistance</fullName>
                </value>
                <value>
                    <fullName>Awareness</fullName>
                </value>
                <value>
                    <fullName>Advocacy</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Appropriate_Timing__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Is this the right time for this partnership?</description>
        <inlineHelpText>Is this the right time for this partnership?</inlineHelpText>
        <label>Appropriate Timing</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Background_of_Partnership__c</fullName>
        <description>Short Summary of background of Partnership</description>
        <inlineHelpText>Short Summary of background of Partnership</inlineHelpText>
        <label>Background of Partnership</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Background_on_Organization__c</fullName>
        <label>Background on Organization</label>
        <length>4000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Benefit_to_IAVA__c</fullName>
        <label>Benefit to IAVA</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Boot_Camp__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This partnership is a boot camp.</description>
        <label>Boot Camp</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Contact_Information__c</fullName>
        <label>Contact Information</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Core_Business__c</fullName>
        <label>Core Business</label>
        <length>4000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Currently_Working_with_Veterans__c</fullName>
        <label>Currently Working with Veterans</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Detailed_Goal_Description__c</fullName>
        <description>What is the goal for each metric? How much/many?</description>
        <inlineHelpText>What is the goal for each metric? How much/many?</inlineHelpText>
        <label>Detailed Goal Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Director__c</fullName>
        <label>Director</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Distribution_Plan__c</fullName>
        <label>Distribution Plan</label>
        <length>3200</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Distributor__c</fullName>
        <description>Distributor for Film</description>
        <inlineHelpText>Distributor for Film</inlineHelpText>
        <label>Distributor</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <description>Partnership End Date.</description>
        <inlineHelpText>Partnership End Date.</inlineHelpText>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>End_Stage_Goals__c</fullName>
        <description>What needs to be accomplished by the end of the partnership?</description>
        <inlineHelpText>What needs to be accomplished by the end of the partnership?</inlineHelpText>
        <label>End Stage Goals</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Event_Date__c</fullName>
        <label>Event Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Existing_Partners_Involvement__c</fullName>
        <label>Existing Partners &amp; Involvement</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Expected_Results__c</fullName>
        <description>What is the result expected of this partnership?</description>
        <inlineHelpText>What is the result expected of this partnership?</inlineHelpText>
        <label>Expected Results</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Featured_Partner__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Will make this partner appear on the rewards site as the featured partner (only one partnership record should have this checked).</description>
        <inlineHelpText>Will make this partner appear on the rewards site as the featured partner (only one partnership record should have this checked).</inlineHelpText>
        <label>Featured Partner</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Film_Festival_Screenings__c</fullName>
        <label>Film Festival Screenings</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Film_URL__c</fullName>
        <label>Film URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Financial_Support_Description__c</fullName>
        <label>Financial Support Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Financial_Support_Offer__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Financial Support Offer</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Goal_Achievement_Plan__c</fullName>
        <description>How can the goal be accomplished?</description>
        <inlineHelpText>How can the goal be accomplished?</inlineHelpText>
        <label>Goal Achievement Plan</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Goal_is_Reasonable__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Is the goal reasonable?</description>
        <inlineHelpText>Is the goal reasonable?</inlineHelpText>
        <label>Goal is Reasonable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Goals_in_Working_with_IAVA__c</fullName>
        <label>Goals in Working with IAVA</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>HEEC_Categories__c</fullName>
        <label>HEEC Categories</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Health</fullName>
                </value>
                <value>
                    <fullName>Education</fullName>
                </value>
                <value>
                    <fullName>Employment</fullName>
                </value>
                <value>
                    <fullName>Community</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>How_Do_You_Envision_Working_with_IAVA__c</fullName>
        <label>How Do You Envision Working with IAVA</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>How_Will_Film_Add_Value_to_IAVA__c</fullName>
        <label>How Will Film Add Value to IAVA</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>IAVA_Goals_Aligned__c</fullName>
        <description>Does this match the overall goals of IAVA?</description>
        <inlineHelpText>Does this match the overall goals of IAVA?</inlineHelpText>
        <label>IAVA Goals Aligned</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>IAVA_Mission_Aligned__c</fullName>
        <description>Will it help improve the lives of Iraq and Afghanistan veterans and their families?</description>
        <inlineHelpText>Will it help improve the lives of Iraq and Afghanistan veterans and their families?</inlineHelpText>
        <label>IAVA Mission Aligned</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>IAVA_Resource_Investment__c</fullName>
        <description>What investment of money or resources will be required of IAVA?</description>
        <inlineHelpText>What investment of money or resources will be required of IAVA?</inlineHelpText>
        <label>IAVA Resource Investment</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>IAVA_Values_Aligned__c</fullName>
        <description>Does this align with IAVA values?</description>
        <inlineHelpText>Does this align with IAVA values?</inlineHelpText>
        <label>IAVA Values Aligned</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Ideal_Staff_POC__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Who is the best person at IAVA to be working on this?</description>
        <inlineHelpText>Who is the best person at IAVA to be working on this?</inlineHelpText>
        <label>Ideal Staff POC</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Partnerships</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>In_Kind_Contribution_Description__c</fullName>
        <label>In-Kind Contribution Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>In_Kind_Contribution_Offer__c</fullName>
        <defaultValue>false</defaultValue>
        <label>In-Kind Contribution Offer</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Internal_Veterans_Affinity_Group__c</fullName>
        <description>Is there an internal Veteran&apos;s affinity group at the Partner&apos;s Organization?</description>
        <inlineHelpText>Is there an internal Veteran&apos;s affinity group at the Partner&apos;s Organization?</inlineHelpText>
        <label>Internal Veterans Affinity Group</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Iraq_Afghanistan_Veteran_Involvement__c</fullName>
        <label>Iraq/Afghanistan Veteran Involvement</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Is_the_Film_Fully_Funded__c</fullName>
        <label>Is the Film Fully Funded</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Key_Leadership__c</fullName>
        <label>Key Leadership</label>
        <length>3000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Length_of_Partnership__c</fullName>
        <description>What is the timing of the partnership?</description>
        <inlineHelpText>What is the timing of the partnership?</inlineHelpText>
        <label>Length of Partnership</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Marketing_Budget__c</fullName>
        <label>Marketing Budget</label>
        <precision>11</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Name_of_Film__c</fullName>
        <label>Name of Film</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Next_Step__c</fullName>
        <label>Next Step (deprec)</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Notable_Press_Coverage__c</fullName>
        <inlineHelpText>Include Links</inlineHelpText>
        <label>Notable Press Coverage</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <label>Notes / Next Steps</label>
        <length>3000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Number_of_Total_Gives__c</fullName>
        <description>Number of total related Gives on the partnership record</description>
        <inlineHelpText>Number of total related Gives on the partnership record</inlineHelpText>
        <label>Num. Total Gives</label>
        <summaryForeignKey>Give__c.Partnership_Request__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Org_Name__c</fullName>
        <description>This is the organization which is related to the partnership request submitted by webform.</description>
        <inlineHelpText>This is the organization which is related to the partnership request submitted by webform.</inlineHelpText>
        <label>Org Name</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Organization__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Organization</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Partnerships</relationshipLabel>
        <relationshipName>Partnership_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Organizations_Experts_Involved_with_Film__c</fullName>
        <label>Organizations/Experts Involved with Film</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Origin_of_Relationship__c</fullName>
        <label>Origin of Relationship</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Previous Partners</fullName>
                </value>
                <value>
                    <fullName>Unsolicited</fullName>
                </value>
                <value>
                    <fullName>Strategic Partnerships</fullName>
                </value>
                <value>
                    <fullName>Introduced by another person</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Other_Current_Partners__c</fullName>
        <label>Other Current Partners</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Other_Partnership_Description__c</fullName>
        <label>Other Partnership Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Other_Partnership_Offer__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Other Partnership Offer</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Other_Staff_Needed__c</fullName>
        <description>Does anyone else at IAVA need to be brought in on this?</description>
        <inlineHelpText>Does anyone else at IAVA need to be brought in on this?</inlineHelpText>
        <label>Other Staff Needed</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Other_Supported_Charities__c</fullName>
        <description>What other charities do they currently support?</description>
        <inlineHelpText>What other charities do they currently support?</inlineHelpText>
        <label>Other Supported Charities</label>
        <length>3000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Parties_Involved__c</fullName>
        <description>Who is involved? (IAVA and Partners)</description>
        <inlineHelpText>Who is involved? (IAVA and Partners)</inlineHelpText>
        <label>Parties Involved</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Partner_Category__c</fullName>
        <label>Partner Category</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Sports</fullName>
                </value>
                <value>
                    <fullName>Entertainment</fullName>
                </value>
                <value>
                    <fullName>Media</fullName>
                </value>
                <value>
                    <fullName>Auto</fullName>
                </value>
                <value>
                    <fullName>Apparel</fullName>
                </value>
                <value>
                    <fullName>Non profit</fullName>
                </value>
                <value>
                    <fullName>Technology</fullName>
                </value>
                <value>
                    <fullName>Finance</fullName>
                </value>
                <value>
                    <fullName>Energy</fullName>
                </value>
                <value>
                    <fullName>Hotel</fullName>
                </value>
                <value>
                    <fullName>Electronics</fullName>
                </value>
                <value>
                    <fullName>Defense/military</fullName>
                </value>
                <value>
                    <fullName>Health</fullName>
                </value>
                <value>
                    <fullName>Restaurant/bar</fullName>
                </value>
                <value>
                    <fullName>Food/beverage</fullName>
                </value>
                <value>
                    <fullName>Travel</fullName>
                </value>
                <value>
                    <fullName>Digital</fullName>
                </value>
                <value>
                    <fullName>Arts</fullName>
                </value>
                <value>
                    <fullName>Business</fullName>
                </value>
                <value>
                    <fullName>Retail</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Partner_Level__c</fullName>
        <label>Partner Level</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Active Action</fullName>
                </value>
                <value>
                    <fullName>Active Conversations</fullName>
                </value>
                <value>
                    <fullName>Stewardship</fullName>
                </value>
                <value>
                    <fullName>Courting</fullName>
                </value>
                <value>
                    <fullName>Prospective</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Partnership_Program_Metrics__c</fullName>
        <description>What can be measured for each aspect of the partnership to track success?</description>
        <inlineHelpText>What can be measured for each aspect of the partnership to track success?</inlineHelpText>
        <label>Partnership/Program Metrics</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Partnership_Type__c</fullName>
        <label>Partnership Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Film</fullName>
                </value>
                <value>
                    <fullName>Ticket Give</fullName>
                </value>
                <value>
                    <fullName>Resources &amp; Benefits</fullName>
                </value>
                <value>
                    <fullName>Nonprofit &amp; Government Org</fullName>
                </value>
                <value>
                    <fullName>Corporation &amp; Sponsorship</fullName>
                </value>
                <value>
                    <fullName>PRISM</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Partnership_Worthwhile__c</fullName>
        <description>Does this seem worthwhile?</description>
        <inlineHelpText>Does this seem worthwhile?</inlineHelpText>
        <label>Partnership Worthwhile</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Philanthropic_Focus__c</fullName>
        <label>Philanthropic Focus</label>
        <length>3000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Point_in_Production_Process__c</fullName>
        <label>Point in Production Process</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Development</fullName>
                </value>
                <value>
                    <fullName>Pre-Production</fullName>
                </value>
                <value>
                    <fullName>Production</fullName>
                </value>
                <value>
                    <fullName>Post-Production</fullName>
                </value>
                <value>
                    <fullName>Distribution</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Potentially_Controversial__c</fullName>
        <description>Would this partnership be considered controversial by some? Is preliminary review needed?</description>
        <inlineHelpText>Would this partnership be considered controversial by some? Is preliminary review needed?</inlineHelpText>
        <label>Potentially Controversial</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Priority__c</fullName>
        <label>Priority</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>High</fullName>
                </value>
                <value>
                    <fullName>Medium</fullName>
                </value>
                <value>
                    <fullName>Low</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Producer__c</fullName>
        <label>Producer</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Production_Budget__c</fullName>
        <label>Production Budget</label>
        <precision>11</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Public_Description__c</fullName>
        <inlineHelpText>For related Gives, this description will appear on the Rucksack site wherever a short description of the partner is needed.</inlineHelpText>
        <label>Public Brief Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Public_Detail_Description__c</fullName>
        <inlineHelpText>This is the long description that will appear on the Rucksack site when someone drills into this specific partnership record.</inlineHelpText>
        <label>Public Detail Description</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Public_Partner_Name__c</fullName>
        <description>Name of partner to appear on Rewards site</description>
        <inlineHelpText>Name of partner to appear on Rewards site</inlineHelpText>
        <label>Public Partner Name</label>
        <length>80</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Publicity_Plan__c</fullName>
        <label>Publicity Plan</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Reasons_for_Pursuing__c</fullName>
        <description>What are the specific reasons, purpose or benefits of accomplishing the goal?</description>
        <inlineHelpText>What are the specific reasons, purpose or benefits of accomplishing the goal?</inlineHelpText>
        <label>Reasons for Pursuing</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Related_Campaign__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Campaign used for tracking fundraising on this partnership</description>
        <inlineHelpText>Campaign used for tracking fundraising on this partnership</inlineHelpText>
        <label>Related Campaign</label>
        <referenceTo>Campaign</referenceTo>
        <relationshipLabel>Partnerships</relationshipLabel>
        <relationshipName>Partnerships</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Related_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>If there is a specific contact related to this object, select it here.</description>
        <inlineHelpText>If there is a specific contact related to this object, select it here.</inlineHelpText>
        <label>Related Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Partnerships</relationshipLabel>
        <relationshipName>Partnerships</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Related_Department__c</fullName>
        <label>Related Department</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Online</fullName>
                </value>
                <value>
                    <fullName>Membership</fullName>
                </value>
                <value>
                    <fullName>Development</fullName>
                </value>
                <value>
                    <fullName>Communications</fullName>
                </value>
                <value>
                    <fullName>Ad Council</fullName>
                </value>
                <value>
                    <fullName>Strategic Partnerships</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Release_Date__c</fullName>
        <label>Release Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Response_ID__c</fullName>
        <description>FormAssembly response ID</description>
        <inlineHelpText>FormAssembly response ID</inlineHelpText>
        <label>FormAssembly Response ID</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Response_Link__c</fullName>
        <description>Link to original response</description>
        <formula>if(isblank(Response_ID__c),&quot;&quot;,HYPERLINK(&quot;https://app.formassembly.com/responses/view/&quot; &amp; Response_ID__c , &quot;View response&quot;, &quot;_blank&quot;))</formula>
        <inlineHelpText>Link to original response</inlineHelpText>
        <label>FA Response Link</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Revenue_Last_3_Years__c</fullName>
        <label>Revenue Last 3 Years</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Rolling_Action_Items__c</fullName>
        <description>What needs to be accomplished daily, weekly and monthly to stay on track?</description>
        <inlineHelpText>What needs to be accomplished daily, weekly and monthly to stay on track?</inlineHelpText>
        <label>Rolling Action Items</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Scheduled_Screenings__c</fullName>
        <label>Scheduled Screenings</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Services_Offer__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Services Offer</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Show_Partner_Logo__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Determines whether logo appears in partner section of Rucksack website</description>
        <inlineHelpText>Determines whether logo appears in partner section of Rucksack website</inlineHelpText>
        <label>Partner logo on partners page</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Show_partner_logo_on_rewards_homepage__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Determines whether logo shows up in logo block on Rewards site</description>
        <inlineHelpText>Determines whether logo shows up in logo block on Rewards site</inlineHelpText>
        <label>Partner logo in logo block</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Sort_Order_in_Logo_block__c</fullName>
        <description>Determines the Sort Order in the Logo Block (Ascending Order).</description>
        <label>Sort Order in Logo block</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sort_Order_on_Partners_page__c</fullName>
        <description>Determines the Sort Order on the Partners Page (Ascending Order).</description>
        <label>Sort Order on Partners page</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Stage__c</fullName>
        <label>Stage</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Submitted by Partner</fullName>
                </value>
                <value>
                    <fullName>IAVA to Outreach</fullName>
                </value>
                <value>
                    <fullName>Needs Followup</fullName>
                </value>
                <value>
                    <fullName>Closed/Rejected</fullName>
                </value>
                <value>
                    <fullName>Active Partnership</fullName>
                </value>
                <value>
                    <fullName>Inactive/Completed Partnership</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <description>Partnership Start Date.</description>
        <inlineHelpText>Partnership Start Date.</inlineHelpText>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Strategic_Action_Plan__c</fullName>
        <description>What action steps need to be taken to achieve the goal? (Action Plan)</description>
        <inlineHelpText>What action steps need to be taken to achieve the goal? (Action Plan)</inlineHelpText>
        <label>Strategic Action Plan</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Summary_of_Film__c</fullName>
        <label>Summary of Film</label>
        <length>3000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Ticket_Give_Stage__c</fullName>
        <label>Ticket Give Stage</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Partnership_Type__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Submitted by Partner</fullName>
                </value>
                <value>
                    <fullName>Accepted by SP &amp; Sent to Membership</fullName>
                </value>
                <value>
                    <fullName>Accepted by Membership &amp; Sent to Online</fullName>
                </value>
                <value>
                    <fullName>Rejected by Membership</fullName>
                </value>
                <value>
                    <fullName>Form Setup Online</fullName>
                </value>
                <value>
                    <fullName>Offer Sent to Members</fullName>
                </value>
                <value>
                    <fullName>Ticket Winners Confirmed</fullName>
                </value>
                <value>
                    <fullName>Names Sent to Partner</fullName>
                </value>
                <value>
                    <fullName>Partner Followup Completed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Timing_Considerations_Moving_Forward__c</fullName>
        <label>Timing Considerations Moving Forward</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Timing_Considerations__c</fullName>
        <label>Timing Considerations</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Trackable_Performance_Measurements__c</fullName>
        <description>How will I know when it is accomplished? How will I track these action steps and goal?</description>
        <inlineHelpText>How will I know when it is accomplished? How will I track these action steps and goal?</inlineHelpText>
        <label>Trackable Performance Measurements</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Veteran_Service_Organization_Involvement__c</fullName>
        <label>Veteran Service Organization Involvement</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Veterans_on_Sr_Leadership__c</fullName>
        <label>Veterans on Sr. Leadership</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
</CustomObject>